--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "@okex/wasmknife": "^0.0.1"
+    "@okexchain/wasmknife": "^0.0.1"
   },
   "workspaces": [],
   "author": "{{authors}}",
