--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "@okexchain/wasmknife": "^0.1.1"
+    "@okexchain/bytecraft": "^0.1.7"
   },
   "workspaces": [],
   "author": "{{authors}}",
